[project]
name = "hng-stage-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.11.0",
    "fastapi[standard]>=0.119.1",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "responses>=0.25.8",
    "sqlmodel>=0.0.27",
]
